# tutorialpress

./: README.md  pyproject.toml
tutorialpress/: settings.py  urls.py
tutorialpress/core/: models.py  router.py  views.py
tutorialpress/core/migrations/: 0001_initial.py  0002_categoria.py  0003_publicacao_categoria.py
tutorialpress/core/serializers/: __init__.py
tutorialpress/serializers/: __init__.py
