[tool.poetry]
name = "tutorialpress"
version = "0.1.0"
description = "API usando o Django Rest Framework"
authors = ["Marco André Mendes <marcoandre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
